# heygen_rust

./: .env.sample  Cargo.toml  README.md
examples/: create_avatar_video.rs  create_avatar_video_from_video_payload.rs  delete_webhook.rs  generate_video_from_template.rs  list_all_avatars.rs  list_templates.rs  list_videos.rs  list_webhooks.rs  list_webhooks_available_events.rs  register_webhook.rs  retrieve_remaining_credits.rs  retrieve_template_details.rs  retrieve_video_details.rs  update_webhook.rs  using_webhooks.rs
examples/video-generate/: Cargo.toml
examples/video-generate/src/: main.rs
examples/webhooks/: Cargo.toml
examples/webhooks/src/: main.rs  settings.rs
heygen/: Cargo.toml
heygen/examples/: create_avatar_video.rs  generate_avatar_video.rs  generate_video_from_template.rs  list_all_avatars.rs  list_templates.rs  list_videos.rs  retrieve_template_details.rs  retrieve_video_details.rs
heygen/src/: bot.rs
heygen/src/schemas/: list_videos.rs  mod.rs  template.rs  video.rs
src/: bot.rs  lib.rs  main.rs
src/schemas/: list_videos.rs  mod.rs  payload.rs  template.rs  video.rs  webhook.rs
