[package]
name = "heygen"
version = "0.1.1"
edition = "2021"

# exclude = [
#     "examples_settings"
# ]

authors = [
  "OnlyCoiners Dev <dev@onlycoiners.com>",
  "Sergio Tales <sergiotalesdev@onlycoiners.com>", 
]

license = "MIT" 
description = "HeyGen API from Only Finance LTDA"
repository = "https://github.com/OnlyCoiners/heygen_rust"
documentation = "https://docs.rs/heygen"
keywords = ["heygen"]
# https://crates.io/category_slugs, Use only what are inside the list up to 5.
categories = [] 
readme = "README.md" 

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json", "multipart", "blocking"] }
url = {version = "2.5.4", features = ["serde"]}
anyhow = "1.0.95"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
tracing = "0.1.41"
