[package]
name = "heygen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "*", features = ["json", "multipart", "blocking"] }
url = {version = "2.5.4", features = ["serde"]}
anyhow = "1.0.95"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
tracing = "0.1.41"
