[package]
name = "webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heygen = {path = "../../heygen"}
lazy_static = "1.5.0"
dotenvy = "0.15.7"
tracing = "0.1.41"

